force-app/main/default/objects/IntegrationFieldMapping__mdt/IntegrationFieldMapping__mdt.object-meta.xml
<CustomObject>
    <description>Utilizado para fazer o DE PARA de valores entre sistemas</description>
    <label>IntegrationFieldMapping</label>
    <pluralLabel>IntegrationFieldMappings</pluralLabel>
</CustomObject>