force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>