force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Campo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>