force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/RMAPIValue__c.field-meta.xml
<CustomField>
    <fullName>RMAPIValue__c</fullName>
    <label>RMAPIValue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>