force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/sfAPIName__c.field-meta.xml
<CustomField>
    <fullName>sfAPIName__c</fullName>
    <label>APIName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>