force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/SmartSIMAPIValue__c.field-meta.xml
<CustomField>
    <fullName>SmartSIMAPIValue__c</fullName>
    <label>SmartSIMAPIValue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>