force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/VivoNetAPIValue__c.field-meta.xml
<CustomField>
    <fullName>VivoNetAPIValue__c</fullName>
    <label>VivoNetAPIValue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>