force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/X4PApiValue__c.field-meta.xml
<CustomField>
    <fullName>X4PApiValue__c</fullName>
    <label>4PApiValue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>